[package]
name = "tobox"
version = "0.1.0"
authors = ["JKearnsl <pooolg@hotmail.com>"]
edition = "2021"


[dependencies]
tokio = { version = "^1.38", features = [
    "rt",
    "rt-multi-thread",
    "macros"
] }
actix-web = {  version = "^4.8", features = ["rustls-0_23"] }
rustls = "^0.23"
rustls-pemfile = "^2.1"
log = "^0.4"
env_logger = "^0.11"

# Data
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9.34-deprecated"
async-trait = "^0.1"
uuid = { version = "^1.10", features = [
    "v4",
    "serde",
    "fast-rng",
    "macro-diagnostics"
] }
chrono = "^0.4"
strum = "^0.26"
strum_macros = "^0.26"
sha2 = "^0.10"

# Database
sea-orm = { version = "^0.12", features = [
    "sqlx-sqlite",
    "with-uuid",
    "with-chrono",
    "runtime-tokio-rustls",
    "macros"
] }
