[package]
name = "tobox"
version = "0.1.4"
authors = ["JKearnsl <pooolg@hotmail.com>"]
edition = "2021"

[[bin]]
name = "tobox"
path = "src/tobox/main.rs"


[dependencies]
tokio = { version = "^1.39", features = [
    "rt",
    "rt-multi-thread",
    "macros"
] }
tokio-stream = "^0.1"
actix-web = {  version = "^4.8", features = ["rustls-0_23"] }
actix-files = "^0.6"
actix-multipart = "^0.7"
rustls = "^0.23"
rustls-pemfile = "^2.1"
regex = "^1.10"
log = "^0.4"
env_logger = "^0.11"

# Data
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9.34-deprecated"
derive_more = "^0.99"
async-trait = "^0.1"
nanoid = "^0.4"
chrono = "^0.4"
strum = "^0.26"
strum_macros = "^0.26"
sha2 = "^0.10"

# Database
sqlx = { version = "^0.8", features = [
    "runtime-tokio",
    "sqlite",
    "sqlx-sqlite",
    "chrono"
] }
rand = "0.8.5"
